src/objects/vlocity_ins__VlocityFunctionArgument__c.object
<CustomObject>
    <description>Input and output parameter of a Vlocity Function. Master-detail child object of Vlocity Function.</description>
    <fields>
        <fullName>vlocity_ins__DataType__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Input</fullName>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DomainType__c</fullName>
        <label>Domain Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Object Lookup</fullName>
                </value>
                <value>
                    <fullName>Type in</fullName>
                </value>
                <value>
                    <fullName>Context Dimension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PicklistSelectionMode__c</fullName>
        <label>Picklist Selection Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityFunctionId__c</fullName>
        <label>Vlocity Function</label>
        <referenceTo>vlocity_ins__VlocityFunction__c</referenceTo>
        <relationshipLabel>Vlocity Function Arguments</relationshipLabel>
        <relationshipName>VlocityFunctionArguments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityPicklistId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Picklist</label>
        <referenceTo>vlocity_ins__Picklist__c</referenceTo>
        <relationshipLabel>Vlocity Function Arguments</relationshipLabel>
        <relationshipName>VlocityFunctionArguments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vlocity Function Argument</label>
    <nameField>
        <label>Function Argument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Function Arguments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>